force-app/main/default/objects/custom_create87__c/custom_create87__c.object-meta.xml
<CustomObject>
    <label>Custom created object87</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects87</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>