force-app/main/default/objects/custom_create87__c/fields/custom_create_87field545__c.field-meta.xml
<CustomField>
    <fullName>custom_create_87field545__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 87field545</label>
    <type>Checkbox</type>
</CustomField>