force-app/main/default/objects/custom_create87__c/fields/custom_create_87field566__c.field-meta.xml
<CustomField>
    <fullName>custom_create_87field566__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 87field566</label>
    <type>Checkbox</type>
</CustomField>